--- a/www/css/style.css
+++ b/www/css/style.css
@@ -537,6 +537,10 @@ a {
           box-shadow: 0 4px 9px 0.3px rgba(0, 0, 0, 0.22);
 }
 
+.main > .eagle > .panel.disabled {
+  display: none;
+}
+
 .main > .eagle > .panel.column {
   padding: 0px;
   -webkit-box-orient: vertical;
