--- a/www/sass/style.scss
+++ b/www/sass/style.scss
@@ -408,6 +408,10 @@ a {
             background-color: rgba(253, 253, 253, .75); // rgb(253, 253, 253);
     
             box-shadow: 0 4px 9px .3px rgba(0, 0, 0, 0.22);
+
+            &.disabled {
+                display: none;
+            }
             
             &.column {
                 padding: 0px;
