--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,7 +6,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -15,6 +15,8 @@
 
 ::-webkit-scrollbar-thumb {
   background-color: #e97171;
+  -webkit-box-shadow: 0 0 5px 1px rgba(255, 85, 108, 0.65);
+          box-shadow: 0 0 5px 1px rgba(255, 85, 108, 0.65);
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -538,9 +540,9 @@ a {
   width: 0%;
   height: 100%;
   background-color: #6ba4ff;
-  left: 0;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  left: -10px;
+  -webkit-box-shadow: 0 0 10px 5px rgba(85, 179, 255, 0.65);
+          box-shadow: 0 0 10px 5px rgba(85, 179, 255, 0.65);
   -webkit-transition: width 0.4s cubic-bezier(0.22, 1, 0.58, 1);
   transition: width 0.4s cubic-bezier(0.22, 1, 0.58, 1);
 }
@@ -892,6 +894,8 @@ a {
   width: 15px;
   height: 2px;
   background-color: #3b73f8;
+  -webkit-box-shadow: 0 0 5px 1px rgba(110, 190, 255, 0.65);
+          box-shadow: 0 0 5px 1px rgba(110, 190, 255, 0.65);
   bottom: 0;
   left: -20%;
   -webkit-animation: fetch_loading;
