--- a/www/sass/style.scss
+++ b/www/sass/style.scss
@@ -1197,6 +1197,13 @@ a {
                     // border: 1px solid red;
                     margin-bottom: 26px;
                 }
+                &#com {
+                    cursor: pointer;
+                    border: 2px solid transparent;
+                    &:hover {
+                        border: 2px dashed #7a7ada;
+                    }
+                }
 
                 &.nested {
                     margin: 8px 0px;
